# rusty-tracker

./: README.md
common-lib/: Cargo.toml
common-lib/src/: lib.rs
rusty-tracker/: .gitignore  Cargo.toml  TODO.md  Trunk.toml  index.html  input.css  justfile  package-lock.json  styles.css
rusty-tracker-bevy/: .gitignore  Cargo.toml  flake.nix
rusty-tracker-bevy/.cargo/: config.toml
rusty-tracker-bevy/src/: main.rs  state.rs
rusty-tracker-bevy/src/main_menu/: mod.rs
rusty-tracker-bevy/src/player/: mod.rs
rusty-tracker-bevy/src/setup/: mod.rs
rusty-tracker/src/: app.rs  main.rs
rusty-tracker/src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json.bak
rusty-tracker/src-tauri/capabilities/: default.json
rusty-tracker/src-tauri/src/: main.rs
rusty-tracker/src/app/: header.rs  sequence.rs
rusty-tracker/stream-info/: 1.md
rusty-tracker/style/: output.css
synth-lib/: Cargo.toml
synth-lib/src/: audio.rs  lib.rs  synth.rs
