[package]
name = "rusty-tracker-bevy"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
anyhow = "1.0.86"
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
catppuccin = { git = "https://github.com/calacuda/catppuccin-rust-bevy", version = "2.4.0" }
crossbeam = { version = "0.8.4", features = ["nightly", "crossbeam-channel"] }
rodio = { version = "0.19.0", features = ["symphonia-wav"] }
synth-lib = { version = "0.1.0", path = "../synth-lib" }
tracker-lib = { version = "0.1.0", path = "../common-lib", features = ["bevy"] }
# true = "0.1.0"
