[package]
name = "rusty-tracker-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
# synth-8080-lib = { git = "https://github.com/calacuda/synth-8080", version = "0.1.0", default-features = false, features = ["HiFi"] }
tracker-lib = { version = "0.1.0", path = "../common-lib" }
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2", features = ["all"] }
futures-util = "0.3.31"
leptos_hotkeys = { version = "0.2.2", features = ["debug"] }
# leptos_hotkeys = { version = "0.2.2" }
leptos-use = "0.13"

[workspace]
members = ["src-tauri"]
