[package]
name = "synth-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel", "nightly"] }
crossbeam-channel = "0.5.13"
rayon = "1.10.0"
rodio = { version = "0.18.1", features = ["crossbeam-channel"] }
synth-8080 = { git = "https://github.com/calacuda/synth-8080", version = "0.1.0", default-features = false, features = ["HiFi"] }
synth-8080-lib = { git = "https://github.com/calacuda/synth-8080", version = "0.1.0", default-features = false, features = ["HiFi"] }
tracing = { version = "0.1.40", features = ["async-await", "log", "log-always"] }
tracker-lib = { version = "0.1.0", path = "../common-lib" }
