[package]
name = "rusty-tracker"
version = "0.0.0"
description = "desktop midi tracker and synthesiser"
authors = ["Eoghan West"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.98"
# synth-8080-lib = { git = "https://github.com/calacuda/synth-8080", version = "0.1.0", default-features = false, features = ["HiFi"] }
tracing = { version = "0.1.41", features = ["async-await", "log", "log-always"] }
# synth-lib = { version = "0.1.0", path = "../../synth-lib" }
tracker-lib = { version = "0.1.0", path = "../../common-lib" }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel", "nightly"] }
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2", features = ["window"] }
midir = "0.10.1"
fxhash = "0.2.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
